# 6502

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
.cache/clangd/index/: cpu.c.737758C726240030.idx  cpu.c.E4AA361DE1DDF832.idx  cpu.h.4EC2AA2F2B572B84.idx  cpu.h.B428A515BD10ABBE.idx  emulator.c.0724BB93EEB929AA.idx  emulator.c.8BB16BB8506CC0CA.idx  emulator.h.CD7630D0BA7C18BB.idx  emulator.h.D4615F4AD9AFEBFB.idx  main.c.248A020227762B3B.idx  main.c.5C7FAB683FC64A4E.idx  types.h.D8DB001CACCBB7A6.idx  types.h.DD30A0D5D19502EE.idx
logs/: log.txt
src/lib/: cpu.c  cpu.h  types.h
src/test/: emulator.c  emulator.h  main.c
